# pcapflower

./: .gitignore  README.md  example.py  pyproject.toml
pcapflower/: __init__.py  _constants.py  _convert.py  _flow.py  _session.py  _stats.py  _writer.py
tests/: test_convert.py  test_flow.py  test_session.py  test_stats.py  test_writer.py
