[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pcapflower"
version = "1.0.0"
description = "High-performance PCAP-to-CSV network flow extractor for edge devices"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Luiz Henrique", email = "luizlinkezio@gmail.com" }]
requires-python = ">=3.10"
keywords = ["pcap", "pcapng", "network", "flow", "CICFlowMeter", "ids", "intrusion detection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "dpkt>=1.9.8",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/luiz-linkezio/pcapflower"

[tool.setuptools.packages.find]
where = ["."]
include = ["pcapflower*"]

[tool.ruff]
line-length = 100
